# unleashed-firmware

./: .clang-format  .clangd  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pvsconfig  .pvsoptions  .sublime-project  Brewfile  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  Dockerfile  GAMES_ONLY.md  MACOS_GUIDE.md  Makefile  README.md  ReadMe.md  RoadMap.md  SConstruct  SUPPORT.md  all-the-apps-extra.tgz  buildRelease.sh  docker-compose.yml  fbt  fbt.cmd  fbt_options.py  firmware.scons  flash_core1_main.sh  flash_core2_ble.sh  flash_otp_version.sh  flipper-zero-cla.md  syntax_check.sh  test_iso7816_helpers.c  test_mrtd_helpers.c  tsconfig.json  wiki-deploy.sh
.ci_files/: anims_ofw.txt  devbuild_msg_discord.txt  devbuild_msg_telegram.txt  release_msg_discord.txt  release_msg_telegram.txt  rgb.patch
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  check-version.ps1  create-assets-tag.ps1  create-or-update-release-with-assets.ps1  deploy_wiki.sh  pull_request_template.md  simple-check-version.ps1
.run/: Clean ALL.run.xml  [Debug] Build FAPs.run.xml  [Debug] Build updater.run.xml  [Debug] Build.run.xml  [Debug] Flash (USB, w_o resources) (1).run.xml  [Debug] Flash (USB, w_o resources).run.xml  [Debug] Launch App on Flipper.run.xml  (+7 more)
core-rs/: .gitignore  Cargo.toml  build.rs  core-rs.mk
core-rs/flipper-core/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
core-rs/flipper-core/src/: lib.rs
core-rs/flipper-f1-sys/: Cargo.toml  build.rs
core-rs/flipper-f1-sys/src/: lib.rs
core-rs/src/: lib.rs
(+13045 files in other folders)
