[package]
name = "flipper-core"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.14"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"

[profile.dev]
panic = "abort"
